Add synonyms APIs support to the client.
