# resources/api/api-spec.yml
@@ -335,3 +335,64 @@ paths:
       responses:
         "application/json":
           description: "Document list."
+
+  /engines/{engine_name}/synonyms:
+    get:
+      operationId: listSynonyms
+      tags:
+      - synonyms
+      parameters:
+      - $ref: "#/components/parameters/engineNameParam"
+      - $ref: "#/components/parameters/pageCurrent"
+      - $ref: "#/components/parameters/pageSize"
+      responses:
+        "application/json":
+          description: "List of synonyms set"
+    post:
+      operationId: createSynonymSet
+      tags:
+      - synonyms
+      parameters:
+      - $ref: "#/components/parameters/engineNameParam"
+      - name: synonyms
+        in: query
+        required: true
+        schema:
+          type: array
+          items:
+            type: string
+      responses:
+        "application/json":
+          description: "Synonym set data."
+
+  /engines/{engine_name}/synonyms/{synonym_set_id}:
+    get:
+      operationId: getSynonymSet
+      tags:
+      - synonyms
+      parameters:
+      - $ref: "#/components/parameters/engineNameParam"
+      - name: synonym_set_id
+        in: path
+        description: Synonym set id.
+        required: true
+        schema:
+          type: string
+      responses:
+        "application/json":
+          description: "Synonym set data."
+    delete:
+      operationId: deleteSynonymSet
+      tags:
+      - synonyms
+      parameters:
+      - $ref: "#/components/parameters/engineNameParam"
+      - name: synonym_set_id
+        in: path
+        description: Synonym set id.
+        required: true
+        schema:
+          type: string
+      responses:
+        "application/json":
+          description: "Delete operation result."
